flux/apps/wailord/home-automation/nodered/app/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    tailscale.com/proxy-class: "jscknet"
  name: nodered-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: nodered
      http:
        paths:
          - backend:
              service:
                name: nodered-main
                port:
                  number: 1880
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nodered
      secretName: nodered.local-tls
